# in-netsuite

./: .gitignore  README.md  pyproject.toml
src/in_netsuite/: __init__.py  base_models.py  exceptions.py  fields.py  helpers.py  netsuite.py  operators.py  rest.py  restlets.py  suiteql.py
src/in_netsuite.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/in_netsuite/models/: __init__.py  credit_memo.py  customer.py  customer_payment.py  department.py  employee.py  invoice.py  journal.py  sales_order.py  vendor.py
tests/: test_data.py  test_mochup.py  test_netsuite.py
